--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 .DS_Store
-archive
 src/vit_model/archive
-src/archive
 vit_paper.pdf
 .ipynb_checkpoints
 **/__pycache__/
 src/__pycache__
 __pycache__
 src/vit_model/data_prep_pretrained.py
+model
+src/vit_model/main.py
