--- a/setup.cfg
+++ b/setup.cfg
@@ -23,3 +23,26 @@ python_requires = >=3.6
 package_dir =
     =src
 zip_safe = no
+
+[options.extras_require]
+testing =
+    pytest>=6.0
+    pytest-cov>=2.0
+    mypy>=0.910
+    flake8>=3.9
+    tox>=3.24
+
+[options.package_data]
+vit_model = py.typed
+
+[flake8]
+max-line-length = 160
+exclude = 
+    .ipynb_checkpoints
+    build/
+    dist/
+    *.egg-info/
+    .git/
+    __pycache__/
+    data_prep_pretrained.py
+    main.py
